@@ -167,7 +167,7 @@ extern const uint16_t g_commonconfig[NCOMMON_CONFIG];
  *
  ************************************************************************************/
 
-extern void weak_function stm32_spiinitialize(void);
+void weak_function stm32_spiinitialize(void);
 
 /************************************************************************************
  * Name: stm32_usbinitialize
@@ -177,7 +177,7 @@ extern void weak_function stm32_spiinitialize(void);
  *
  ************************************************************************************/
 
-extern void weak_function stm32_usbinitialize(void);
+void weak_function stm32_usbinitialize(void);
 
 /************************************************************************************
  * Name: stm32_extcontextsave
@@ -188,7 +188,7 @@ extern void weak_function stm32_usbinitialize(void);
  ************************************************************************************/
 
 #ifdef CONFIG_STM32_FSMC
-extern void stm32_extcontextsave(struct extmem_save_s *save);
+void stm32_extcontextsave(struct extmem_save_s *save);
 
 /************************************************************************************
  * Name: stm32_extcontextrestore
@@ -198,7 +198,7 @@ extern void stm32_extcontextsave(struct extmem_save_s *save);
  *
  ************************************************************************************/
 
-extern void stm32_extcontextrestore(struct extmem_save_s *restore);
+void stm32_extcontextrestore(struct extmem_save_s *restore);
 
 /************************************************************************************
  * Name: stm32_extmemgpios
@@ -208,7 +208,7 @@ extern void stm32_extcontextrestore(struct extmem_save_s *restore);
  *
  ************************************************************************************/
 
-extern void stm32_extmemgpios(const uint16_t *gpios, int ngpios);
+void stm32_extmemgpios(const uint16_t *gpios, int ngpios);
 
 /************************************************************************************
  * Name: stm32_enablefsmc
@@ -218,7 +218,7 @@ extern void stm32_extmemgpios(const uint16_t *gpios, int ngpios);
  *
  ************************************************************************************/
 
-extern void stm32_enablefsmc(void);
+void stm32_enablefsmc(void);
 
 /************************************************************************************
  * Name: stm32_disablefsmc
@@ -228,7 +228,7 @@ extern void stm32_enablefsmc(void);
  *
  ************************************************************************************/
 
-extern void stm32_disablefsmc(void);
+void stm32_disablefsmc(void);
 
 /************************************************************************************
  * Name: stm32_selectnor
@@ -238,7 +238,7 @@ extern void stm32_disablefsmc(void);
  *
  ************************************************************************************/
 
-extern void stm32_selectnor(void);
+void stm32_selectnor(void);
 
 /************************************************************************************
  * Name: stm32_deselectnor
@@ -248,7 +248,7 @@ extern void stm32_selectnor(void);
  *
  ************************************************************************************/
 
-extern void stm32_deselectnor(void);
+void stm32_deselectnor(void);
 
 /************************************************************************************
  * Name: stm32_selectsram
@@ -258,7 +258,7 @@ extern void stm32_deselectnor(void);
  *
  ************************************************************************************/
 
-extern void stm32_selectsram(void);
+void stm32_selectsram(void);
 
 /************************************************************************************
  * Name: stm32_deselectsram
@@ -268,7 +268,7 @@ extern void stm32_selectsram(void);
  *
  ************************************************************************************/
 
-extern void stm32_deselectsram(void);
+void stm32_deselectsram(void);
 
 /************************************************************************************
  * Name: stm32_selectlcd
@@ -278,7 +278,7 @@ extern void stm32_deselectsram(void);
  *
  ************************************************************************************/
 
-extern void stm32_selectlcd(void);
+void stm32_selectlcd(void);
 
 /************************************************************************************
  * Name: stm32_deselectlcd
@@ -288,7 +288,7 @@ extern void stm32_selectlcd(void);
  *
  ************************************************************************************/
 
-extern void stm32_deselectlcd(void);
+void stm32_deselectlcd(void);
 
 #endif /* CONFIG_STM32_FSMC */
 
