@@ -567,6 +567,7 @@ static int usbclass_sndpacket(FAR struct pl2303_dev_s *priv)
   FAR struct usbdev_ep_s *ep;
   FAR struct usbdev_req_s *req;
   FAR struct pl2303_req_s *reqcontainer;
+  uint16_t reqlen;
   irqstate_t flags;
   int len;
   int ret = OK;
@@ -586,13 +587,21 @@ static int usbclass_sndpacket(FAR struct pl2303_dev_s *priv)
   ep = priv->epbulkin;
 
   /* Loop until either (1) we run out or write requests, or (2) usbclass_fillrequest()
-   * is unable to fill the request with data (i.e., untilthere is no more data
+   * is unable to fill the request with data (i.e., until there is no more data
    * to be sent).
    */
 
   uvdbg("head=%d tail=%d nwrq=%d empty=%d\n",
         priv->serdev.xmit.head, priv->serdev.xmit.tail,
         priv->nwrq, sq_empty(&priv->reqlist));
+
+  /* Get the maximum number of bytes that will fit into one bulk IN request */
+
+#ifdef CONFIG_PL2303_BULKREQLEN
+  reqlen = MAX(CONFIG_CDCACM_BULKREQLEN, ep->maxpacket);
+#else
+  reqlen = ep->maxpacket;
+#endif
 
   while (!sq_empty(&priv->reqlist))
     {
@@ -603,7 +612,7 @@ static int usbclass_sndpacket(FAR struct pl2303_dev_s *priv)
 
       /* Fill the request with serial TX data */
 
-      len = usbclass_fillrequest(priv, req->buf, req->len);
+      len = usbclass_fillrequest(priv, req->buf, reqlen);
       if (len > 0)
         {
           /* Remove the empty container from the request list */
